fix: scrollbar border color set to transparent

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -3,7 +3,7 @@
 }
   
 ::-webkit-scrollbar-thumb {
-    border: 3px solid var(--background-color);
+    border: 3px solid var(--color-transparent);
     background-clip: padding-box;
     border-radius: var(--border-radius);
     background-color: var(--scrollbar-background-color);
